add build pipeline opt